--- a/wc6/index.html
+++ b/wc6/index.html
@@ -184,33 +184,33 @@ function resize(width, height) {
 	      this.bg.loadTexture('bg')
 	      this.bg.width = width
           this.bg.height = height
-          this.bg.x = width*0.5
-	      this.bg.y = height*0.5
+          this.bg.x = width*0.25
+	      this.bg.y = height*0.25
 
-          this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
-          this.logo.x = width*0.5
-          this.logo.y = height*0.2 
+          this.scaleSprite(this.logo, width, height, 0 ,0.7)
+          this.logo.x = width*0.25
+          this.logo.y = height*0.1
 
-	   	  this.scaleSprite(this.introText, width, height/3, 0 ,0.5)
-	      this.introText.x = width*0.5
+	   	  this.scaleSprite(this.introText, width/3, height, 0 ,0.8)
+	      this.introText.x = width*0.25
 	      this.introText.y = height*1.5 
 
-          this.scaleSprite(this.tutorialText, width, height/3, 0 ,0.4)
-          this.tutorialText.x = width*0.5
-          this.tutorialText.y = height*0.125
+          this.scaleSprite(this.tutorialText, width/3, height, 0 ,0.7)
+          this.tutorialText.x = width*0.25
+          this.tutorialText.y = height*0.05
 
-          this.circle.x = width*0.5
-          this.circle.y = height*0.78
+          this.circle.x = width*0.25
+          this.circle.y = height*0.4
 
           this.scaleSprite(this.tutorialLine, width, height/3, 0 ,0.5)
           this.tutorialLine.x = this.circle.x
           this.tutorialLine.y = this.circle.y
 
           this.board.forEach(function(tile){
-                this.scaleSprite(tile, width, height/3, 0 ,0.28)
+                this.scaleSprite(tile, width/3, height, 0 ,0.5)
           })
-          this.board.x = width*0.5
-          this.board.y = height*0.38
+          this.board.x = width*0.25
+          this.board.y = height*0.2
 
           this.fillLetters.x = width*0.37
           this.fillLetters.y = height*0.56
@@ -364,15 +364,15 @@ function setBase(){
 
     this.letterOne = game.add.text(-70,-120, "O", this.textWhite2);
     this.letterOne.anchor.set(0.5);
-    this.letterOne.scale.set(1.8)
+    this.letterOne.scale.set(1)
 
     this.letterTwo = game.add.text(140,30, "W", this.textWhite2);
     this.letterTwo.anchor.set(0.5);
-    this.letterTwo.scale.set(1.8)
+    this.letterTwo.scale.set(1)
 
     this.letterThree = game.add.text(-60,120, "N", this.textWhite2);
     this.letterThree.anchor.set(0.5);
-    this.letterThree.scale.set(1.8)
+    this.letterThree.scale.set(1)
 
     this.graphics = this.game.add.graphics(0,0);
     this.graphics.lineStyle(40, 0xffffff,1);
@@ -411,12 +411,12 @@ function setBase(){
     }
     else{
         this.board.create(0,0, 'atlas','tile2.png');
-        this.board.create(0,-60,'atlas','tile.png');
-        this.board.create(0, 60,'atlas','tile.png');
-        this.board.create(-60, -60,'atlas','tile.png');
-        this.board.create(-120, -60,'atlas','tile.png');
-        this.board.create(60, 0,'atlas','tile2.png');
-        this.board.create(120, 0,'atlas','tile2.png');
+        this.board.create(0,-35,'atlas','tile.png');
+        this.board.create(0, 35,'atlas','tile.png');
+        this.board.create(-65, -35,'atlas','tile.png');
+        this.board.create(-35, -35,'atlas','tile.png');
+        this.board.create(35, 0,'atlas','tile2.png');
+        this.board.create(65, 0,'atlas','tile2.png');
     }
     
     this.board.setAll('anchor.x', 0.5);
