--- a/wcv3/index.html
+++ b/wcv3/index.html
@@ -31,8 +31,8 @@
 
 <script type="text/javascript">
 	var game = new Phaser.Game({
-	width: window.innerWidth,
-	height: window.innerHeight, 
+	width: 720,
+	height: 1280, 
 	renderer: Phaser.CANVAS,
 	state: this
 });
@@ -53,7 +53,7 @@ function _base64ToArrayBuffer(base64) {
 
 function preload() {
 	
-    this.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
+    this.scale.scaleMode = Phaser.ScaleManager.RESIZE;
     this.scale.pageAlignHorizontally = true;
     this.scale.pageAlignVertically = true
 
@@ -110,8 +110,8 @@ function scaleSpriteTween (sprite, availableSpaceWidth, availableSpaceHeight, pa
 function popup (sprite, availableSpaceWidth, availableSpaceHeight, padding, scaleMultiplier,mydelay,time) {
     if(mydelay == null || mydelay == undefined) mydelay = 0
     if(time == null || time == undefined) time = 400
-    var scale = this.getSpriteScale(sprite._frame.width, sprite._frame.height, availableSpaceWidth, availableSpaceHeight, padding);
-    game.add.tween(sprite.scale).to({ x: (scale * scaleMultiplier)+0.1, y:(scale * scaleMultiplier)+0.1}, time, Phaser.Easing.Sinusoidal.In).to({ x: scale * scaleMultiplier, y: scale * scaleMultiplier}, time*0.5, Phaser.Easing.Sinusoidal.Out).delay(mydelay).start(); 
+    var scale = 1
+    game.add.tween(sprite.scale).to({ x: '+0.25', y:'+0.25'}, time, Phaser.Easing.Sinusoidal.In).yoyo(true).delay(mydelay).start(); 
 }
 
 function click (sprite, availableSpaceWidth, availableSpaceHeight, padding, scaleMultiplier) {
@@ -135,11 +135,11 @@ function getSpriteScale (spriteWidth, spriteHeight, availableSpaceWidth, availab
     var ratio = 1;
     var currentDevicePixelRatio = getDevicePixelRatio();
     // Sprite needs to fit in either width or height
-    var widthRatio = (spriteWidth * currentDevicePixelRatio + 2 * minPadding) / availableSpaceWidth;
-    var heightRatio = (spriteHeight * currentDevicePixelRatio + 2 * minPadding) / availableSpaceHeight;
-    if(widthRatio > 1 || heightRatio > 1){
-        ratio = 1 / Math.max(widthRatio, heightRatio);
-    }
+    //var widthRatio = (spriteWidth * currentDevicePixelRatio) ;
+    //var heightRatio = (spriteHeight * currentDevicePixelRatio);
+    //if(widthRatio > 1 || heightRatio > 1){
+       // ratio = 1 / Math.max(widthRatio, heightRatio);
+   // }
     return ratio * currentDevicePixelRatio;
 }
 
@@ -171,15 +171,16 @@ function resize(width, height) {
           this.bg.x = width*0.5
 	      this.bg.y = height*0.5
 
-          this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
+          //this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
+          this.logo.scale.set(0.5)
           this.logo.x = width*0.5
           this.logo.y = height*0.2 
 
-	   	  this.scaleSprite(this.introText, width, height/3, 0 ,0.5)
+	   	  //this.scaleSprite(this.introText, width, height/3, 0 ,0.5)
 	      this.introText.x = width*0.5
 	      this.introText.y = height*1.5 
 
-          this.scaleSprite(this.tutorialText, width, height/3, 0 ,0.4)
+          //this.scaleSprite(this.tutorialText, width, height/3, 0 ,0.4)
           this.tutorialText.x = width*0.5
           this.tutorialText.y = height*0.125
 
@@ -191,7 +192,7 @@ function resize(width, height) {
           this.tutorialLine.y = this.circle.y
 
           this.board.forEach(function(tile){
-                this.scaleSprite(tile, width, height/3, 0 ,0.24)
+                tile.scale.set(0.5)
           })
           this.board.x = width*0.5
           this.board.y = height*0.38
@@ -321,10 +322,12 @@ function setBase(){
 
     this.introText = game.add.text(-this.game.width,0, "GO ON A JOURNEY\nOF WORDS AND WISDOM", this.textWhite);
     this.introText.anchor.set(0.5);
+    this.introText.scale.set(0.5);
     this.introText.strokeThickness = 1
 
     this.tutorialText = game.add.text(-this.game.width,0, "SWIPE TO SOLVE PUZZLES\nAND UNLOCK\nENCHANTING SCENERY", this.textWhite);
     this.tutorialText.anchor.set(0.5);
+    this.tutorialText.scale.set(0.5);
     this.tutorialText.setShadow(-1, 1, 'rgba(18,127,170,0.8)', 5);
     this.tutorialText.alpha = 0
 
