--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -162,6 +162,25 @@ function callCTA(){
 }
 
 function resize(width, height) {
+	 var canvas = game.canvas;
+    // calculate aspect ratios
+    var windowRatio = width / height;
+    var gameRatio = canvas.width / canvas.height;
+
+    var newWidth;
+    var newHeight;
+
+    // resize depending on aspect ratio
+    if (windowRatio < gameRatio) {
+      newWidth = width;
+      newHeight = width / gameRatio;
+    } else {
+      newWidth = height * gameRatio;
+      newHeight = height;
+    }
+
+    canvas.style.width = newWidth + 'px';
+    canvas.style.height = newHeight + 'px';
 	   var isLandscape = height / width  < 1.3 ? true: false;
 
 	   if(!isLandscape){
@@ -295,10 +314,7 @@ function resize(width, height) {
 }
 
 function create() {
-	    game.scale.fullScreenScaleMode = Phaser.ScaleManager.RESIZE;
 	setBase();
-	    this.game.input.onDown.addOnce(function(){this.scale.startFullScreen(false)},this);
-
     this.resize(window.innerWidth,window.innerHeight);
 }
 
