--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -31,8 +31,8 @@
 
 <script type="text/javascript">
 	var game = new Phaser.Game({
-	width: 360,
-	height: 640, 
+	width: window.innerWidth* window.devicePixelRatio,
+	height: window.innerHeight* window.devicePixelRatio, 
 	renderer: Phaser.CANVAS,
 	state: this
 });
@@ -162,25 +162,8 @@ function callCTA(){
 }
 
 function resize(width, height) {
-	 var canvas = game.canvas;
-    // calculate aspect ratios
-    var windowRatio = width / height;
-    var gameRatio = canvas.width / canvas.height;
-
-    var newWidth;
-    var newHeight;
-
-    // resize depending on aspect ratio
-    if (windowRatio < gameRatio) {
-      newWidth = width;
-      newHeight = width / gameRatio;
-    } else {
-      newWidth = height * gameRatio;
-      newHeight = height;
-    }
-
-    canvas.style.width = newWidth + 'px';
-    canvas.style.height = newHeight + 'px';
+	var  scaleRatio = getDevicePixelRatio() / 3;
+	console.log(scaleRatio)
 	   var isLandscape = height / width  < 1.3 ? true: false;
 
 	   if(!isLandscape){
@@ -190,7 +173,8 @@ function resize(width, height) {
           this.bg.x = width*0.5
 	      this.bg.y = height*0.5
 
-          this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
+          //this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
+          this.logo.scale.set(scaleRatio)
           this.logo.x = width*0.5
           this.logo.y = height*0.2 
 
@@ -210,7 +194,8 @@ function resize(width, height) {
           this.tutorialLine.y = this.circle.y
 
           this.board.forEach(function(tile){
-                this.scaleSprite(tile, width, height/3, 0 ,0.24)
+          		tile.scale.set(scaleRatio)
+                //this.scaleSprite(tile, width, height/3, 0 ,0.24)
           })
           this.board.x = width*0.5
           this.board.y = height*0.38
