--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -31,9 +31,11 @@
 
 		<script type="text/javascript">
 	var game = new Phaser.Game({
-	width: window.innerWidth,
-	height: window.innerHeight, 
+	width: 720,
+	height: 1280, 
 	renderer: Phaser.CANVAS,
+	resolution:1,
+    antialias:true,
 	state: this
 });
 
