--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -58,7 +58,7 @@ function preload() {
     this.scale.scaleMode = Phaser.ScaleManager.RESIZE;
     this.scale.pageAlignHorizontally = true;
     this.scale.pageAlignVertically = true
-
+	this.game.renderer.renderSession.roundPixels = true;
 
 	this.bgColor = "#468BA8"; //Background Color
     this.textWhite = { font: "bold 42px Arial", fill: "#fff",stroke: '#fff',strokeThickness:3, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
