--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -31,8 +31,8 @@
 
 		<script type="text/javascript">
 	var game = new Phaser.Game({
-	width: 720,
-	height: 1280, 
+	width: window.innerWidth * window.devicePixelRatio,
+	height: window.innerHeight * window.devicePixelRatio, 
 	renderer: Phaser.CANVAS,
 	resolution:1,
     antialias:true,
@@ -298,7 +298,7 @@ function resize(width, height) {
 
 function create() {
 	setBase();
-    this.resize(window.innerWidth,window.innerHeight);
+    this.resize(window.innerWidth*window.devicePixelRatio,window.innerHeight*window.devicePixelRatio);
 }
 
 function setBase(){
