--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -65,11 +65,17 @@ canvas:focus {
 </script>
 
 		<script type="text/javascript">
+
+			 let clientWidth = document.documentElement.clientWidth
+ let clientHeight = document.documentElement.clientHeight
 	var game = new Phaser.Game({
-	width: window.innerWidth,
-	height: window.innerHeight, 
+	width: clientWidth,
+	height: clientHeight, 
 	renderer: Phaser.CANVAS,
-    antialias:true,
+	"callbacks.postBoot": function() {
+         document.getElementsByTagName("canvas")[0].style.width = clientWidth + "px"
+         document.getElementsByTagName("canvas")[0].style.height = clientHeight + "px"
+     },
 	state: this
 });
 
@@ -176,7 +182,7 @@ function getSpriteScale (spriteWidth, spriteHeight, availableSpaceWidth, availab
     if(widthRatio > 1 || heightRatio > 1){
         ratio = 1 / Math.max(widthRatio, heightRatio);
     }
-    return Math.round(ratio * currentDevicePixelRatio);
+    return ratio * currentDevicePixelRatio;
 }
 
 function callCTA(){
@@ -198,13 +204,7 @@ function callCTA(){
 }
 
 function resize(width, height) {
-	this.game.canvas.style.width = width + 'px';
-    this.game.canvas.style.height = height + 'px';
-
-    // Resize canvas and scale future draws.
-    this.game.canvas.width = width;
-    this.game.canvas.height = height;
-
+	this.game.scale.refresh();
 	   var isLandscape = height / width  < 1.3 ? true: false;
 
 	   if(!isLandscape){
@@ -214,7 +214,7 @@ function resize(width, height) {
           this.bg.x = width*0.5
 	      this.bg.y = height*0.5
 
-          this.scaleSprite(this.logo, width, height, 0 ,0.5)
+          this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
           this.logo.x = Math.floor(width*0.5)
           this.logo.y = Math.floor(height*0.2) 
 
@@ -222,22 +222,22 @@ function resize(width, height) {
 	      this.introText.x = Math.floor(width*0.5)
 	      this.introText.y = Math.floor(height*1.5)
 
-          this.scaleSprite(this.tutorialText, width, height, 0 ,0.5)
+          this.scaleSprite(this.tutorialText, width, height/3, 0 ,0.4)
           this.tutorialText.x = Math.floor(width*0.5)
           this.tutorialText.y = Math.floor(height*0.125)
 
-          this.circle.x = Math.floor(width*0.5)
-          this.circle.y =Math.floor(height*0.78)
+          this.circle.x = width*0.5
+          this.circle.y = height*0.78
 
           this.scaleSprite(this.tutorialLine, width, height/3, 0 ,0.5)
           this.tutorialLine.x = this.circle.x
           this.tutorialLine.y = this.circle.y
 
           this.board.forEach(function(tile){
-                this.scaleSprite(tile, width, height, 0 ,0.24)
+                this.scaleSprite(tile, width, height/3, 0 ,0.24)
           })
-          this.board.x = Math.floor(width*0.5)
-          this.board.y = Math.floor(height*0.38)
+          this.board.x = width*0.5
+          this.board.y = height*0.38
 
           this.fillLetters.x = width*0.37
           this.fillLetters.y = height*0.56
@@ -339,7 +339,7 @@ function resize(width, height) {
 
 function create() {
 	setBase();
-    this.resize(window.innerWidth,window.innerHeight);
+    this.resize(clientWidth,clientHeight);
 }
 
 function setBase(){
@@ -498,7 +498,7 @@ function setBase(){
 }
 
 function startIntro(){
-    this.popup(this.logo, this.game.width, this.game.height, 0 ,0.5)
+    this.popup(this.logo, this.game.width, this.game.height/3, 0 ,0.7)
     game.add.tween(this.logo).to({alpha: 1}, 350, Phaser.Easing.Quadratic.Out,true);
     var tween = game.add.tween(this.introText).to({y: this.game.height*0.45}, 300, Phaser.Easing.Quadratic.Out).start();
     tween.onComplete.add(function(){
@@ -516,9 +516,9 @@ function startTutorial(){
         var cTween = game.add.tween(this.circle).to({alpha: 1}, 350, Phaser.Easing.Quadratic.Out,true);
 
         if(!isLandscape)
-            this.popup(this.circle, this.game.width, this.game.height, 0 ,0.5)
+            this.popup(this.circle, this.game.width, this.game.height/3, 0 ,1)
         else
-            this.popup(this.circle, this.game.width, this.game.height, 0 ,1)
+            this.popup(this.circle, this.game.width, this.game.height/3, 0 ,1.8)
         
         game.add.tween(this.board).to({alpha: 1}, 350, Phaser.Easing.Quadratic.Out,true);
         game.add.tween(this.tutorialLine).to({alpha: 1}, 350, Phaser.Easing.Quadratic.Out).delay(800).start();
