--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -66,6 +66,20 @@ canvas:focus {
 
 		<script type="text/javascript">
 
+const PIXEL_RATIO = (function() {
+    var ctx = document.createElement("canvas").getContext("2d"),
+        dpr = window.devicePixelRatio || 1,
+
+        // The backing store size in relation to the canvas element
+        bsr = ctx.webkitBackingStorePixelRatio ||
+        ctx.mozBackingStorePixelRatio ||
+        ctx.msBackingStorePixelRatio ||
+        ctx.oBackingStorePixelRatio ||
+        ctx.backingStorePixelRatio || 1
+
+    return dpr / bsr
+})();
+
 			 let clientWidth = document.documentElement.clientWidth
  let clientHeight = document.documentElement.clientHeight
 	var game = new Phaser.Game({
@@ -175,7 +189,7 @@ function scaleSprite (sprite, availableSpaceWidth, availableSpaceHeight, padding
 
 function getSpriteScale (spriteWidth, spriteHeight, availableSpaceWidth, availableSpaceHeight, minPadding) {
     var ratio = 1;
-    var currentDevicePixelRatio = getDevicePixelRatio();
+    var currentDevicePixelRatio = PIXEL_RATIO;
     // Sprite needs to fit in either width or height
     var widthRatio = (spriteWidth * currentDevicePixelRatio + 2 * minPadding) / availableSpaceWidth;
     var heightRatio = (spriteHeight * currentDevicePixelRatio + 2 * minPadding) / availableSpaceHeight;
