--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -109,13 +109,13 @@ function _base64ToArrayBuffer(base64) {
 
 function preload() {
 	
-    this.scale.scaleMode = Phaser.ScaleManager.RESIZE;
+    this.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
     this.scale.pageAlignHorizontally = true;
     this.scale.pageAlignVertically = true
 	this.game.renderer.renderSession.roundPixels = true;
 
 	this.bgColor = "#468BA8"; //Background Color
-    this.textWhite = { font: "bold 42px Arial", fill: "#fff",stroke: '#fff',strokeThickness:3, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
+    this.textWhite = { font: "bold 72px Arial", fill: "#fff",stroke: '#fff',strokeThickness:3, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
     this.textRed = { font: "bold 54px Arial", fill: "#5F002A",stroke: '#5F002A',strokeThickness:2, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
     this.textWhite2 = { font: "bold 62px Arial", fill: "#fff",stroke: '#fff',strokeThickness:0, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
 
@@ -218,7 +218,6 @@ function callCTA(){
 }
 
 function resize(width, height) {
-	this.game.scale.refresh();
 	   var isLandscape = height / width  < 1.3 ? true: false;
 
 	   if(!isLandscape){
@@ -233,13 +232,13 @@ function resize(width, height) {
           this.logo.y = Math.floor(height*0.2) 
 
 	   	  //this.scaleSprite(this.introText, width, height/3, 0 ,0.5)
-	   	            this.introText.scale.set(0.6)
+	   	  this.introText.scale.set(0.35)
 
 	      this.introText.x = Math.floor(width*0.5)
 	      this.introText.y = Math.floor(height*1.5)
 
           //this.scaleSprite(this.tutorialText, width, height/3, 0 ,0.4)
-          this.tutorialText.scale.set(0.5)
+          this.tutorialText.scale.set(0.3)
           this.tutorialText.x = Math.floor(width*0.5)
           this.tutorialText.y = Math.floor(height*0.125)
 
