--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -80,16 +80,10 @@ const PIXEL_RATIO = (function() {
     return dpr / bsr
 })();
 
-			 let clientWidth = document.documentElement.clientWidth
- let clientHeight = document.documentElement.clientHeight
 	var game = new Phaser.Game({
 	width: 720,
 	height: 1280, 
 	renderer: Phaser.CANVAS,
-	"callbacks.postBoot": function() {
-         document.getElementsByTagName("canvas")[0].style.width = clientWidth + "px"
-         document.getElementsByTagName("canvas")[0].style.height = clientHeight + "px"
-     },
 	state: this
 });
 
@@ -217,7 +211,7 @@ function callCTA(){
     this.game.input.onDown.add(onClickDownload,this);
 }
 
-function resize(width, height) {
+function cresize(width, height) {
 	   var isLandscape = height / width  < 1.3 ? true: false;
 
 	   if(!isLandscape){
@@ -355,7 +349,7 @@ function resize(width, height) {
 
 function create() {
 	setBase();
-    this.resize(720,1280);
+    this.cresize(720,1280);
 }
 
 function setBase(){
