--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -349,7 +349,7 @@ function cresize(width, height) {
 
 function create() {
 	setBase();
-    this.cresize(720,1280);
+    this.cresize(this.game.width,this.game.height);
 }
 
 function setBase(){
