--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -11,48 +11,13 @@
 
 	<style type="text/css">
 
-	html {
-    height: 100%;
-    background-color: #0A1632;
-}
-body {
-    margin: 0;
-    max-height: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: #0A1632;
-    font-family: Helvetica, arial, sans-serif;
-    position: relative;
-    width: 100%;
+		* {
+			margin: 0;
+			padding: 0;
+			background-color: black;
+			overflow: hidden;
 
-    -webkit-tap-highlight-color: transparent;
-}
-
-#application-canvas {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-#application-canvas.fill-mode-NONE {
-    margin: auto;
-}
-#application-canvas.fill-mode-KEEP_ASPECT {
-    width: 100%;
-    height: auto;
-    margin: 0;
-}
-#application-canvas.fill-mode-FILL_WINDOW {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-}
-
-canvas:focus {
-    outline: none;
-}
+		}
 
 	</style>
 	
@@ -83,6 +48,7 @@ const PIXEL_RATIO = (function() {
 	var game = new Phaser.Game({
 	width: 720,
 	height: 1280, 
+	resolution:1,
 	renderer: Phaser.CANVAS,
 	state: this
 });
