--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -56,7 +56,7 @@ function preload() {
     this.scale.scaleMode = Phaser.ScaleManager.RESIZE;
     this.scale.pageAlignHorizontally = true;
     this.scale.pageAlignVertically = true
-game.scale.refresh(); 
+   game.stage.smoothed = false;
 
 	this.bgColor = "#468BA8"; //Background Color
     this.textWhite = { font: "bold 42px Arial", fill: "#fff",stroke: '#fff',strokeThickness:3, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
@@ -135,8 +135,8 @@ function getSpriteScale (spriteWidth, spriteHeight, availableSpaceWidth, availab
     var ratio = 1;
     var currentDevicePixelRatio = getDevicePixelRatio();
     // Sprite needs to fit in either width or height
-    var widthRatio = (spriteWidth * currentDevicePixelRatio + 2 * minPadding) / 720;
-    var heightRatio = (spriteHeight * currentDevicePixelRatio + 2 * minPadding) / 1280;
+    var widthRatio = (spriteWidth * currentDevicePixelRatio + 2 * minPadding) / availableSpaceWidth;
+    var heightRatio = (spriteHeight * currentDevicePixelRatio + 2 * minPadding) / availableSpaceHeight;
     if(widthRatio > 1 || heightRatio > 1){
         ratio = 1 / Math.max(widthRatio, heightRatio);
     }
@@ -180,7 +180,7 @@ game.scale.refresh();
 	      this.introText.x = width*0.5
 	      this.introText.y = height*1.5 
 
-          this.scaleSprite(this.tutorialText, width, height/3, 0 ,0.3)
+          this.scaleSprite(this.tutorialText, width, height/3, 0 ,0.4)
           this.tutorialText.x = width*0.5
           this.tutorialText.y = height*0.125
 
