--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -163,7 +163,12 @@ function callCTA(){
 
 function resize(width, height) {
 	   var isLandscape = height / width  < 1.3 ? true: false;
-game.scale.refresh(); 
+		this.game.canvas.width = width;
+        this.game.canvas.height = height;
+
+		this.game.canvas.style.width = Math.floor(width) + 'px';
+        this.game.canvas.style.height = Math.floor(height) + 'px';
+
 	   if(!isLandscape){
 	      this.bg.loadTexture('bg')
 	      this.bg.width = width
@@ -171,11 +176,11 @@ game.scale.refresh();
           this.bg.x = width*0.5
 	      this.bg.y = height*0.5
 
-          this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
+          this.scaleSprite(this.logo, width, height, 0 ,0.6)
           this.logo.x = width*0.5
           this.logo.y = height*0.2 
 
-	   	  this.scaleSprite(this.introText, width, height, 0 ,0.35)
+	   	  this.scaleSprite(this.introText, width, height, 0 ,0.45)
 	   	  //this.introText.scale.set(window.devicePixelRatio)
 	      this.introText.x = width*0.5
 	      this.introText.y = height*1.5 
