--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -56,7 +56,7 @@ function preload() {
     this.scale.scaleMode = Phaser.ScaleManager.RESIZE;
     this.scale.pageAlignHorizontally = true;
     this.scale.pageAlignVertically = true
- 
+
 
 	this.bgColor = "#468BA8"; //Background Color
     this.textWhite = { font: "bold 42px Arial", fill: "#fff",stroke: '#fff',strokeThickness:3, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
@@ -133,7 +133,7 @@ function scaleSprite (sprite, availableSpaceWidth, availableSpaceHeight, padding
 
 function getSpriteScale (spriteWidth, spriteHeight, availableSpaceWidth, availableSpaceHeight, minPadding) {
     var ratio = 1;
-    var currentDevicePixelRatio =  window.devicePixelRatio;
+    var currentDevicePixelRatio = getDevicePixelRatio();
     // Sprite needs to fit in either width or height
     var widthRatio = (spriteWidth * currentDevicePixelRatio + 2 * minPadding) / availableSpaceWidth;
     var heightRatio = (spriteHeight * currentDevicePixelRatio + 2 * minPadding) / availableSpaceHeight;
@@ -163,12 +163,14 @@ function callCTA(){
 
 function resize(width, height) {
 	   var isLandscape = height / width  < 1.3 ? true: false;
-		this.game.canvas.width = width;
-        this.game.canvas.height = height;
 
-		this.game.canvas.style.width = Math.floor(width) + 'px';
-        this.game.canvas.style.height = Math.floor(height) + 'px';
-        this.scale.refresh(width,height)
+		if (this.game.device.pixelRatio > 1) {
+            var userRatio = this.game.device.pixelRatio * 1;
+            console.log(this.game.device.pixelRatio,userRatio)
+            this.game.scale.setGameSize(window.innerWidth * userRatio, window.innerHeight * userRatio);
+            //    manager.setUserScale(1 / userRatio, 1 / userRatio);
+            //}
+        }
 
 	   if(!isLandscape){
 	      this.bg.loadTexture('bg')
@@ -177,12 +179,11 @@ function resize(width, height) {
           this.bg.x = width*0.5
 	      this.bg.y = height*0.5
 
-          this.scaleSprite(this.logo, width, height, 0 ,0.6)
+          this.scaleSprite(this.logo, width, height/3, 0 ,0.7)
           this.logo.x = width*0.5
           this.logo.y = height*0.2 
 
-	   	  this.scaleSprite(this.introText, width, height, 0 ,0.45)
-	   	  //this.introText.scale.set(window.devicePixelRatio)
+	   	  this.scaleSprite(this.introText, width, height/3, 0 ,0.5)
 	      this.introText.x = width*0.5
 	      this.introText.y = height*1.5 
 
