--- a/wcv2/index.html
+++ b/wcv2/index.html
@@ -71,10 +71,12 @@ function preload() {
 	this.game.renderer.renderSession.roundPixels = true;
    this.stage.disableVisibilityChange = false;
 	
+
         this.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
         this.scale.pageAlignHorizontally = true;
         this.scale.pageAlignVertically = true
-
+ 		game.scale.setShowAll();    
+ 		game.scale.refresh()
 
 	this.bgColor = "#468BA8"; //Background Color
     this.textWhite = { font: "bold 62px Arial", fill: "#fff",stroke: '#fff',strokeThickness:3, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
