--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -182,8 +182,8 @@ function resize(width, height) {
     var height=window.innerHeight;
     var aspect=width/height
 	var app_container = document.getElementById('app-container');
-	app_container.style.width = (1280)+"px";
-	app_container.style.height = (720)+"px";
+	app_container.style.width = (width)+"px";
+	app_container.style.height = (height)+"px";
 
 
 	   if(!isLandscape){
