--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -19,6 +19,11 @@
 
 		}
 
+		#app-container{
+			width: '100%';
+			height: '100%';
+		}
+
 
 			
 
@@ -42,7 +47,7 @@
 	width: window.innerWidth,
 	height: window.innerHeight, 
 	renderer: Phaser.CANVAS,
-	roundPixels:true,
+	resolution:1,
 	parent:'app-container',
 	state: this,
 });
@@ -791,6 +796,45 @@ function update() {
         this.onClickLetter(this.circle.children[3])
     }
 }
+
+// Wait for the SDK to become ready: 
+if (mraid.getState() === 'loading') {
+    // If the SDK is still loading, add a listener for the 'ready' event:
+    mraid.addEventListener('ready', onSdkReady); 
+} else {
+    // Otherwise, if the SDK is ready, execute your function:
+    onSdkReady(); 
+}
+
+// Implement a function that shows the ad when it first renders:
+function onSdkReady() {
+    // The viewableChange event fires if the ad container's viewability status changes.
+    // Add a listener for the viewabilityChange event, to handle pausing and resuming: 
+    mraid.addEventListener('viewableChange', viewableChangeHandler);
+    // The isViewable method returns whether the ad container is viewable on the screen.
+    if (mraid.isViewable()) {
+        // If the ad container is visible, play the ad:
+        showMyAd(); 
+    }
+}
+
+// Implement a function for executing the ad:
+function showMyAd() { 
+    // Insert code for showing your playable ad.
+    var el = document.body;
+    el.style.display = 'block';
+}
+
+// Implement a function that handles pausing and resuming the ad based on visibility:
+function viewableChangeHandler(viewable) {
+    if(viewable) {
+        // If the ad is viewable, show the ad:
+        showMyAd(); 
+    } else {
+        // If not, pause the ad.
+    }
+}
+
 		</script>
 	</body>
 </html>
