--- a/wcv1/index.html
+++ b/wcv1/index.html
@@ -49,7 +49,6 @@
 	renderer: Phaser.CANVAS,
 	resolution:1,
 	parent:'app-container',
-	antialias:false,
 	state: this,
 });
 
@@ -182,14 +181,7 @@ function callCTA(){
 function resize(width, height) {
 	var isLandscape = height / width  < 1.3 ? true: false;
 	
-	var dpi=window.devicePixelRatio || 1
-    //var dpi =1
-    var width=window.innerWidth;
-    var height=window.innerHeight;
-    var aspect=width/height
-	var app_container = document.getElementById('app-container');
-	app_container.style.width = (width)+"px";
-	app_container.style.height = (height)+"px";
+	this.game.stage.scale.set(width/height)
 
 
 	   if(!isLandscape){
