--- a/cookwonderV3/index.html
+++ b/cookwonderV3/index.html
@@ -11,14 +11,25 @@
 
 	<style type="text/css">
 
-		* {
-			margin: 0;
-			padding: 0;
-			background-color: black;
-			overflow: hidden;
+	body {
+    width: 100%;
+    height: 100%;
+    margin:0;
+    padding:0;
+    overflow: hidden;    
+}
+
+#div_game{
+    margin:0;
+    padding:0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
 }
 	</style>
-	
+	<div id="div_game"></div>
 	<body>
 <script type="text/javascript">
 /* Phaser v2.20.0 - http://phaser.io - @photonstorm - (c) 2016 Photon Storm Ltd. */
