--- a/cookwonderV3/index.html
+++ b/cookwonderV3/index.html
@@ -28,6 +28,7 @@
     width: 100%;
     height: 100%; 
     image-resolution: 300dpi;
+    object-fit:scale-down;
 }
 	</style>
 	<div id="div_game"></div>
