--- a/ph3/index.html
+++ b/ph3/index.html
@@ -7,19 +7,20 @@
 minimal-ui=1.0" />
     <script src="./libs/phaser.js"></script>
     <style type="text/css">
+  html {
+            margin: 0;
+        }
 
         body {
-            padding: 0px;
-            margin: 0px;
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: #ffffff;
         }
 
         canvas {
-            display: block;
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            background-color: #000000;
         }
     </style>
 </head>
