--- a/wctest/index.html
+++ b/wctest/index.html
@@ -3,21 +3,28 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="robots" content="noindex" /> 
-		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
+    	<meta name="viewport" content="width = device-width, initial-scale =1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,minimal-ui=1.0" />		
 		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
 		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
 		<title>word cross</title>
 	</head>
 
 	<style type="text/css">
+  html {
+            margin: 0;
+        }
 
-		* {
-			margin: 0;
-			padding: 0;
-			background-color: #5397BC;
-			overflow: hidden;
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: #ffffff;
+        }
 
-		}
+        canvas {
+            background-color: #000000;
+        }
 
 	</style>
 	
