--- a/wctest/index.html
+++ b/wctest/index.html
@@ -20,6 +20,7 @@
             width: 100vw;
             height: 100vh;
             background-color: #ffffff;
+            overflow: hidden;
         }
 
         canvas {
