--- a/wctest/index.html
+++ b/wctest/index.html
@@ -3,20 +3,29 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="robots" content="noindex" /> 
-		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
-		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
+    <meta name="viewport" content="width = device-width, initial-scale =
+1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,
+minimal-ui=1.0" />		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
 		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
 		<title>Cooking Wonder</title>
 	</head>
 
 	<style type="text/css">
+  html {
+            margin: 0;
+        }
 
-		* {
-			margin: 0;
-			padding: 0;
-			background-color: black;
-			overflow: hidden;
-}
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #ffffff;
+        }
+
+        canvas {
+            background-color: #000000;
+            width: '100%';
+            height: '100%'
+        }
 	</style>
 	
 	<body>
