--- a/wctest/index.html
+++ b/wctest/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="robots" content="noindex" /> 
+		    <meta name="viewport" content="width = device-width, initial-scale =
+1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,
+minimal-ui=1.0" />
 		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
 		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
 		<title>Cooking Wonder</title>
