--- a/wctest/index.html
+++ b/wctest/index.html
@@ -13,12 +13,21 @@ minimal-ui=1.0" />
 
 	<style type="text/css">
 
-		* {
-			margin: 0;
-			padding: 0;
-			background-color: black;
-			overflow: hidden;
-}
+  html {
+            margin: 0;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #ffffff;
+        }
+
+        canvas {
+        	width: '100%';
+        	height: '100%';
+            background-color: #000000;
+        }
 	</style>
 	
 	<body>
