--- a/wctest/index.html
+++ b/wctest/index.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="robots" content="noindex" /> 
-		    <meta name="viewport" content="width = device-width, initial-scale =
-1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,
-minimal-ui=1.0" />
+		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
 		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
 		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
 		<title>Cooking Wonder</title>
@@ -13,21 +11,12 @@ minimal-ui=1.0" />
 
 	<style type="text/css">
 
-  html {
-            margin: 0;
-        }
-
-        body {
-        	width: '100%';
-        	height: '100%';
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
-        }
-
-        canvas {
-            background-color: #000000;
-        }
+		* {
+			margin: 0;
+			padding: 0;
+			background-color: black;
+			overflow: hidden;
+}
 	</style>
 	
 	<body>
