--- a/cwnew/index.html
+++ b/cwnew/index.html
@@ -359,9 +359,7 @@ let config = {
        mode: Phaser.Scale.RESIZE,
        autoCenter: Phaser.Scale.CENTER_BOTH,
        width: window.innerWidth,
-       height: window.innerHeight,
-       autoRound: true,
-       antialias: true,
+       height: window.innerHeight
     },
 
     plugins: {
