--- a/99test/index.html
+++ b/99test/index.html
@@ -228,12 +228,12 @@ class Game extends Phaser.Scene {
                 this.storesCTA.y = height*0.8
             }
 
-            /*if(this.sys.game.device.os.iPhone && height <= 512){
-                this.logo.setScale(0.3)
-                this.textGame.setScale(0.4)
-                this.blackCar.setScale(0.4)
-                this.car.setScale(0.4)
-            }*/
+            if(height <= 512){
+                this.logo.setScale(0.2)
+                this.textGame.setScale(0.3)
+                this.blackCar.setScale(0.3)
+                this.car.setScale(0.3)
+            }
 
             if(this.sys.game.device.os && !this.sys.game.device.os.iPhone){
                 this.logo.setScale(0.8)
@@ -320,16 +320,16 @@ class Game extends Phaser.Scene {
                 this.storesCTA.y = height*0.87
             }
 
-            /* if(this.sys.game.device.os.iPhone && height <= 512){
-                this.logo.setScale(0.5)
-                this.textGame.setScale(0.5)
-                this.blackCar.setScale(0.4)
-                this.car.setScale(0.4)
-                this.textCTA.setScale(0.45)
-                this.logoCTA.setScale(0.45)
-                this.text2CTA.setScale(0.45)
-                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.45, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.5, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
-            }*/
+             if(height <= 512){
+                this.logo.setScale(0.4)
+                this.textGame.setScale(0.4)
+                this.blackCar.setScale(0.3)
+                this.car.setScale(0.3)
+                this.textCTA.setScale(0.3)
+                this.logoCTA.setScale(0.3)
+                this.text2CTA.setScale(0.3)
+                this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.35, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.35, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
+            }
 
             if(this.sys.game.device.os && !this.sys.game.device.os.iPhone){
                 this.logo.setScale(0.8)
